# image_drawing

./: .gitignore  CMakeLists.txt  Project_imageDrawing.cpp  Project_imageDrawing.h  SFML_pixels.cbp  SFML_pixels.depend  SFML_pixels.layout  source.cpp
src/: Project_imageDrawing.cpp  Project_imageDrawing.h  main.cpp
